docs(changeset): Fix identity backups
